--- a/deployment.yaml
+++ b/deployment.yaml
@@ -40,21 +40,22 @@ spec:
       port: 80
       targetPort: 80
 
-
----
-apiVersion: extensions/v1beta1
+----            
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  #namespace: go
   name: go-ingress
-  annotations:
-    allow.http: "false"
+  #namespace: go
 spec:
+  ingressClassName: traefik
   rules:
-  - host:    msoares.appdev.rancher.marsdigital.site
-    http:
-      paths:
-        - path: /
-          backend:
-            serviceName: go-service
-            servicePort: 80
+    - host: msoares.appdev.rancher.marsdigital.site
+      http:
+        paths:
+          - backend:
+              service:
+                name: go-service
+                port:
+                  number: 80
+            path: /
+            pathType: Prefix
