--- a/deployment.yaml
+++ b/deployment.yaml
@@ -4,7 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: go-server
-  namespace: go
+  #namespace: go
   labels:
     app: goapi
 spec:
@@ -30,7 +30,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: go-service
-  namespace: go
+  #namespace: go
 spec:
   selector:
     app: goapi
@@ -45,7 +45,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: go-ingress
-  namespace: go
+  #namespace: go
 spec:
   ingressClassName: traefik
   rules:
