--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -19,6 +19,8 @@ stages:
   steps:
   - applyYamlConfig:
       path: ./deployment.yaml
+    env:
+      AMBIENTE: appdev
 branch:
   include:
   - prod
