--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -19,7 +19,5 @@ stages:
   steps:
   - applyYamlConfig:
       path: ./deployment.yaml
-branch:
-  include:
-  - prod
+branch: {}
 notification: {}
