--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,24 +3,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: go-server
+  name: go-server-${CICD_GIT_BRANCH}
   #namespace: go
   labels:
-    app: goapi
+    app: goapi-${CICD_GIT_BRANCH}
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: goapi
+      app: goapi-${CICD_GIT_BRANCH}
   template:
     metadata:
       labels:
-        app: goapi
+        app: goapi-${CICD_GIT_BRANCH}
     spec:
       imagePullSecrets:
       - name: pipeline-docker-registry
       containers:
-      - name: goapi
+      - name: goapi-${CICD_GIT_BRANCH}
         image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
         ports:
         - containerPort: 80
@@ -29,11 +29,11 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  name: go-service
+  name: go-service-${CICD_GIT_BRANCH}
   #namespace: go
 spec:
   selector:
-    app: goapi
+    app: goapi-${CICD_GIT_BRANCH}
   type: ClusterIP
   ports:
     - protocol: TCP
@@ -44,17 +44,17 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: go-ingress
+  name: go-ingress-${CICD_GIT_BRANCH}
   #namespace: go
 spec:
   ingressClassName: traefik
   rules:
-    - host: msoares.appdev.rancher.marsdigital.site
+    - host: msoares.${CICD_GIT_BRANCH}.rancher.marsdigital.site
       http:
         paths:
           - backend:
               service:
-                name: go-service
+                name: go-service-${CICD_GIT_BRANCH}
                 port:
                   number: 80
             path: /
