--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -14,7 +14,7 @@ stages:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: go-server:${CICD_EXECUTION_SEQUENCE}
+      tag: go-server-${CICD_GIT_BRANCH}:${CICD_EXECUTION_SEQUENCE}
 - name: Deploy
   steps:
   - applyYamlConfig:
